src/objects/Issue_Area_Join__c.object
<CustomObject>
    <fields>
        <fullName>Actions_Taken__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Actions Taken</label>
        <referenceTo>sb_Actions_Taken__c</referenceTo>
        <relationshipLabel>Issue Area Joins</relationshipLabel>
        <relationshipName>Issue_Area_Joins</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Issue Area Joins</relationshipLabel>
        <relationshipName>Issue_Area_Joins</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Donation__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Donation</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Issue Area Joins</relationshipLabel>
        <relationshipName>Issue_Area_Joins</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Issue_Area__c</fullName>
        <label>Issue Area</label>
        <referenceTo>Issue_Area__c</referenceTo>
        <relationshipLabel>Issue Area Joins</relationshipLabel>
        <relationshipName>Issue_Area_Joins</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Issue Area Join</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Issue Area Join Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Issue Area Joins</pluralLabel>
    <recordTypes>
        <fullName>Donation</fullName>
        <active>true</active>
        <label>Donation</label>
    </recordTypes>
    <recordTypes>
        <fullName>Message_Action</fullName>
        <active>true</active>
        <label>Message Action</label>
    </recordTypes>
    <recordTypes>
        <fullName>Petition</fullName>
        <active>true</active>
        <label>Petition</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>